# jenkins

./: .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  pyproject.toml
jobs/: JenkinsPipeline  e.xml
scripts/: backup.sh  pre_start.sh  validate.sh  volume.sh
src/: main.py
